Stabilize headless Docker REST run for stack-minimal and document runbook
- fix REST runner execution path for .momot jobs in Docker

- improve script compilation/runtime handling (classpath, JPMS access, EPackage registration)

- package required runtime dependencies in Docker image

- add/update stack-example-minimal fixture for deterministic end-to-end validation

- update docs with verified zip payload layout, submission method, and troubleshooting